main aligning, link fix

--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,7 @@ h4 {
 .popover-content{
 	font-size: 13px;
 	color: #575757;
+	line-height: 20px;
 }
 
 
