--- a/css/responsive.css
+++ b/css/responsive.css
@@ -16,7 +16,7 @@
 		float:left;
 		margin: 0 250px 0 250px;
 		/*display: inline;*/
-		padding: 10px;
+		padding: 0 10px;
 	}
 
 	.column-right{
@@ -91,7 +91,7 @@
 		float:left;
 		margin: 0 250px 0 250px;
 		/*display: inline;*/
-		padding: 10px;
+		padding: 0 10px;
 	}
 
 	.column-right{
@@ -168,7 +168,7 @@
 		/*float:left;*/
 		/*margin: 0 250px 0 250px;*/
 		/*display: inline;*/
-		padding: 10px;
+		padding: 0 10px;
 		margin-bottom: 30px;
 	}
 
@@ -259,7 +259,7 @@
 		/*float:left;*/
 		/*margin: 0 250px 0 250px;*/
 		/*display: inline;*/
-		padding: 10px;
+		padding: 0 10px;
 		margin-bottom: 30px;
 	}
 
